# CoDL

./: .gitignore  Dockerfile  README.md
codl-eval-tools/: README.md  conda_install_requirements.sh  requirements.txt
codl-eval-tools/codl-lat-collect-and-eval/: .gitignore  config.py  measure.py
codl-eval-tools/codl-lat-collect-and-eval/core/: measure_base.py  measure_conv2d_base.py  train_base.py  train_model_base.py
codl-eval-tools/codl-lat-collect-and-eval/op_datasets/: dataset_conv2d_large_cnn.csv  dataset_fully_connected_cnn.csv  dataset_pooling_large_cnn.csv
codl-eval-tools/codl-lat-collect-and-eval/test/: op_chain_adb_run_test.py
codl-eval-tools/codl-lat-collect-and-eval/tools/: collect_all_op_latency.sh  collect_op_latency.sh  combine_winograd_latency_data.py  eval_codl_and_baselines.sh  push_lat_predictors_and_configs.sh  remove_timestamp.py
codl-eval-tools/codl-lat-predict/: .gitignore  flops_lr_fit.py  ka_fit.py  lr_fit.py  med_fit.py  nnmeter_rf_fit.py
codl-eval-tools/codl-lat-predict/base/: basic_type.py  metric.py
codl-eval-tools/codl-lat-predict/model/: lr_model.py  nnmeter_rf_models.py
codl-eval-tools/codl-lat-predict/tools/: train_and_eval_codl_lat_predictors.sh  train_and_eval_lat_predictors.sh  train_and_eval_mulayer_lat_predictors.sh
codl-eval-tools/codl-lat-predict/utils/: array_utils.py  data_loader.py  data_utils.py  log_utils.py  math_utils.py
codl-mobile/: .gitignore  README.md
codl-mobile/docs/codl/: README-OLD.md
codl-mobile/docs/fucheng_guide/: mace_backup.md
codl-mobile/mace/: BUILD.bazel  mace.bzl
codl-mobile/mace/core/: BUILD.bazel  allocator.h  arg_helper.cc  buffer.h  co_operator.h  future.cc  future.h  latency_predictor.h  memory_optimizer.cc  memory_optimizer.h  net.cc  net.h  net_def_adapter.cc  net_optimizer.cc  op_context.cc  op_context.h  operator.cc  operator.h  operator_chain.cc  operator_chain.h  part_ratio_predictor.cc  part_ratio_predictor.h  partition_configer.cc  partition_configer.h  rpcmem.cc  rpcmem.h  tensor.cc  tensor.h  tensor_manage_util.cc  tensor_manage_util.h  workspace.cc  workspace.h
codl-mobile/mace/libmace/: capability.cc  mace.cc
codl-mobile/mace/ops/: BUILD.bazel  activation.cc  bias_add.cc  concat.cc  constant_of_shape.cc  conv_2d.cc  conv_2d.h  conv_2d_cpu_gpu_base.cc  conv_2d_cpu_gpu_buffer.cc  conv_2d_cpu_gpu_image_v2.cc  conv_2d_latency_predict.h  conv_2d_lr_latency_predict.cc  conv_2d_part_plan.cc  conv_2d_part_plan.h  conv_2d_part_predict.cc  conv_2d_part_predict.h  conv_2d_rf_latency_predict.cc  conv_3d.cc  conv_pool_2d_base.h  conv_pool_3d_base.h  deconv_2d.cc  deconv_2d.h  deconv_2d_cpu_gpu_buffer.cc  deconv_2d_cpu_gpu_image.cc  deconv_2d_part_plan.cc  deconv_2d_part_plan.h  depthwise_conv2d.cc  depthwise_deconv2d.cc  eltwise.cc  expand.cc  fully_connected.cc  fully_connected.h  fully_connected_cpu_gpu_buffer.cc  fully_connected_cpu_gpu_image.cc  fully_connected_latency_predict.cc  fully_connected_latency_predict.h  fully_connected_part_plan.cc  fully_connected_part_plan.h  gather.cc  gemm_latency_predict.cc  (+31 more)
codl-mobile/mace/proto/: mace.proto
codl-mobile/mace/tools/: BUILD.bazel  mace_run.cc
codl-mobile/mace/utils/: BUILD.bazel  codl_config.cc  codl_config.h  const_model.h  count_down_latch.cc  count_down_latch.h  io_util.h  linear_regression_model.cc  linear_regression_model.h  op_delay_tool.cc  op_delay_tool.h  predict_model.h  random_forest_model.cc  random_forest_model.h  soc_devfreq.cc  soc_devfreq.h  soc_thermal_zone.cc  soc_thermal_zone.h  soc_utils.h  spinlock.cc  spinlock.h  statistics.cc  statistics.h  thread_count_down_latch.cc  thread_count_down_latch.h  thread_pool.cc  thread_pool.h  tuner.h
codl-mobile/repository/opencl-kernel/: opencl_kernel_configure.bzl
codl-mobile/test/codl_run/: BUILD.bazel  conv2d_cpu_gpu_test_task.cc  conv2d_test.cc  conv2d_test.h  conv2d_test_param.h  conv2d_test_task.h  conv2d_test_task_chain.cc  conv2d_test_task_chain.h  conv2d_test_v2.cc  deconv2d_test_param.h  deconv2d_test_task.cc  deconv2d_test_task.h  fully_connected_test_param.h  fully_connected_test_task.cc  fully_connected_test_task.h  matmul_test_param.h  matmul_test_task.cc  matmul_test_task.h  nn_model_builder.cc  nn_model_builder.h  op_chain_executor.cc  op_chain_executor.h  op_chain_helper.cc  op_chain_helper.h  op_chain_latency_predict.cc  op_chain_latency_predict.h  op_chain_search.cc  op_chain_search.h  op_chain_test.cc  op_test_task_chain.cc  op_test_task_chain.h  pooling_test_param.h  pooling_test_task.cc  pooling_test_task.h
codl-mobile/test/codl_run/core/: BUILD.bazel  compute_unit.h  test_param.cc  test_param.h  test_task.cc  test_task.h
codl-mobile/test/codl_run/utils/: BUILD.bazel  conv_2d_util.cc  conv_2d_util.h  deconv_2d_util.cc  deconv_2d_util.h  device_util.cc  device_util.h  fully_connected_util.cc  fully_connected_util.h  io_util.h  matmul_util.cc  matmul_util.h  pooling_util.cc  pooling_util.h  tensor_buffer_util.cc  tensor_buffer_util.h
codl-mobile/test/fucheng/: BUILD.bazel  buffer_image_transform_test.cc  buffer_image_transform_test_v2.cc  buffer_map_copy_test.cc  buffer_map_unmap_test.cc  conv2d_cpu_gpu_test.cc  conv2d_gpu_test_v1.cc  conv2d_gpu_test_v2.cc  conv2d_latency_prediction_test.cc  conv2d_part_plan_test.cc  conv2d_partition_prediction_test.cc  conv2d_test_task_v1.cc  conv2d_test_v1.cc  cpp_json_example.cc  device_util_unused.cc  gemm_test.cc  gemm_test.h  gemm_test_param.h  gemm_test_task.cc  gemm_test_task.h  make_partition_plan_test.cc  random_forest_model_test.cc  random_forest_model_test_param.h  statistics_util.cc  statistics_util.h  tensor_buffer_gpu_test.cc  tensor_buffer_test.cc  tensor_buffer_util_unused.cc  tensor_transpose_util.cc  tensor_transpose_util.h
codl-mobile/test/fucheng/bashscripts/: adb_pull_mace_log.sh  eval_bert.sh  eval_matmul.sh  eval_op_chain.sh
codl-mobile/tools/: bazel-build-mace-run.sh  bazel-build-standalone-lib.sh  bazel.rc  converter.py  device.py  sh_commands.py
codl-mobile/tools/codl/: bazel-build-conv2d-run.sh  build_executable_files.sh  prepare-conv2d-run.sh  push_executable_files.sh  (+1 more)
(+294 files in other folders)
